--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <script src='main.js' async defer></script>
 </head>
 <body>
-    <p id="p1"></p>
-    <button id="tirageCarte">Draw a Card!</button>
-    <p id="p2">test</p>
-    <p id="p3"></p>
-    <p id="p4"></p>
-    <p id="p5"></p>
+    <h1>Casimax</h1>
+    <h2>The House Always Wins!</h2>
+
+    <div>
+        <p id="p1"></p>
+        <button id="tirageCarte">Draw a Card!</button>
+    </div>
 </body>
 </html>
