--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js' async defer></script>
+    <script src='./js/main.js' async defer></script>
 </head>
 <body>
     <h1>Casimax</h1>
-    <h2>The House Always Wins!</h2>
+    <h2>The House Always Wins.</h2>
 
-    <div>
-        <p id="p1"></p>
-        <button id="tirageCarte">Draw a Card!</button>
+    <div id="tableBJ">
+        <div id="TableBlackjackCroupier">
+            
+        </div>
+        <div id="TableBlackjackJoueur">
+            <p id="p1"></p>
+            <button id="BoutonPioche">Draw a Card</button>
+            <button id="BoutonPasser">Pass</button>
+        </div>
     </div>
 </body>
 </html>
