--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>CasiMax - Le Max de Fun</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='./js/main.js' async defer></script>
@@ -12,15 +12,34 @@
     <h1>Casimax</h1>
     <h2>The House Always Wins.</h2>
 
-    <div id="tableBJ">
-        <div id="TableBlackjackCroupier">
-            
+    <div id="TableBlackJack">
+        <div class="Table">
+            <div id="CarteCroupier-1" class="carte">
+            </div>
+            <div id="CarteCroupier-2" class="carte">
+            </div>
+            <div id="CarteCroupier-3" class="carte">
+            </div>
+            <div class="Score">
+                Score: 
+            </div>
         </div>
-        <div id="TableBlackjackJoueur">
-            <p id="p1"></p>
-            <button id="BoutonPioche">Draw a Card</button>
-            <button id="BoutonPasser">Pass</button>
-        </div>
+
+        <div class="Table">
+            <div id="CarteJoueur-1" class="carte">
+            </div>
+            <div id="CarteJoueur-2" class="carte">
+            </div>
+            <div id="CarteJoueur-3" class="carte">
+            </div>
+            <div class="Score">
+                Score: 
+            </div>
+        </div>a
+
+        <button id="BoutonPioche-1">Draw a Card</button>
+        <button id="BoutonPasser">Pass</button>
+        <button id="BoutonReset">Reset</button>
     </div>
 </body>
 </html>
