Many mistakes were made

--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@
 <body>
     <h1>Casimax</h1>
     <h2>The House Always Wins.</h2>
+    <h3>Roadmap of features</h3>
+    <ol>
+        <li>Betting</li>
+        <li>Double down</li>
+        <li>Splitting</li>
+        <li>Insurance</li>
+    </ol>
 
     <div id="TableBlackJack">
         <div class="Table">
-            <div id="CarteCroupier-1" class="carte">
+            <div id="CarteCroupier-1">
             </div>
-            <div id="CarteCroupier-2" class="carte">
+            <div id="CarteCroupier-2">
             </div>
-            <div id="CarteCroupier-3" class="carte">
+            <div id="CarteCroupier-3">
             </div>
             <div class="Score">
                 Score: 
@@ -26,19 +33,19 @@
         </div>
 
         <div class="Table">
-            <div id="CarteJoueur-1" class="carte">
+            <div id="CarteJoueur-1">
             </div>
-            <div id="CarteJoueur-2" class="carte">
+            <div id="CarteJoueur-2">
             </div>
-            <div id="CarteJoueur-3" class="carte">
+            <div id="CarteJoueur-3">
             </div>
             <div class="Score">
                 Score: 
             </div>
-        </div>a
+        </div>
 
-        <button id="BoutonPioche-1">Draw a Card</button>
-        <button id="BoutonPasser">Pass</button>
+        <button id="BoutonPioche" style="visibility: visible;">Hit</button>
+        <button id="BoutonPasser">Stay</button>
         <button id="BoutonReset">Reset</button>
     </div>
 </body>
