sort of working scoreboard

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src='./js/main.js' async defer></script>
 </head>
 <body>
-    <h1>Casimax</h1>
+    <h1>CasiMax</h1>
     <h2>The House Always Wins.</h2>
     <h3>Roadmap of features</h3>
     <ol>
@@ -20,31 +20,22 @@
     </ol>
 
     <div id="TableBlackJack">
+        
+        <div id="ScoreCroupier" class="Score"></div>
         <div class="Table">
-            <div id="CarteCroupier-1">
-            </div>
-            <div id="CarteCroupier-2">
-            </div>
-            <div id="CarteCroupier-3">
-            </div>
-            <div class="Score">
-                Score: 
-            </div>
+            <div id="CarteCroupier-1"></div>
+            <div id="CarteCroupier-2"></div>
+            <div id="CarteCroupier-3"></div>
         </div>
 
         <div class="Table">
-            <div id="CarteJoueur-1">
-            </div>
-            <div id="CarteJoueur-2">
-            </div>
-            <div id="CarteJoueur-3">
-            </div>
-            <div class="Score">
-                Score: 
-            </div>
+            <div id="CarteJoueur-1"></div>
+            <div id="CarteJoueur-2"></div>
+            <div id="CarteJoueur-3"></div>
         </div>
+        <div id="ScoreJoueur" class="Score"></div>
 
-        <button id="BoutonPioche" style="visibility: visible;">Hit</button>
+        <button id="BoutonPioche">Hit</button>
         <button id="BoutonPasser">Stay</button>
         <button id="BoutonReset">Reset</button>
     </div>
